--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 ---
 navigation:
 - text: Home
-  url: /index.html
+  urls: [ /., /index.html ]
 - text: Documentation
-  url: /documentation.html
+  urls: [ /documentation.html ]
 - text: Videos
-  url: /videos.html
+  urls: [ /videos.html ]
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -40,8 +40,8 @@ navigation:
           <div class="nav-collapse">
             <ul class="nav">
 	      {% for link in page.navigation %}
-	      <li {% if page.url == link.url %}class="active"{% endif %}>
-		<a href="{{ link.url }}">{{link.text}}</a></li>
+	      <li {% if link.urls contains page.url %}class="active"{% endif %}>
+		<a href="{{ link.urls[0] }}">{{ link.text }}</a></li>
 	      {% endfor %}
 	      <li><a href="http://en.opensuse.org/openSUSE:Snapper_Tutorial">Tutorial</a></li>
 	      <li><a href="http://en.opensuse.org/openSUSE:Snapper_FAQ">FAQ</a></li>
