- fixed some html errors

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,12 +1,13 @@
-<!-- Twitter -->
+<!-- Start Twitter Code -->
 <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
 <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<!-- End Twitter Code -->
 
-<!-- Google PlusOne -->
+<!-- Start Google PlusOne Code -->
 <script type="text/javascript">
   (function() {
   var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -14,3 +15,4 @@
   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
+<!-- End Google PlusOne Code -->
