--- a/_includes/piwik.html
+++ b/_includes/piwik.html
@@ -1,12 +1,13 @@
-<!-- Start Piwik Trecking Code -->
+<!-- Start Piwik Tracking Code -->
 <script type="text/javascript">
 var pkBaseURL = (("https:" == document.location.protocol) ? "https://beans.opensuse.org/piwik/" : "http://beans.opensuse.org/piwik/");
 document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
+</script>
+<script type="text/javascript">
 try {
 var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 22);
 piwikTracker.trackPageView();
 piwikTracker.enableLinkTracking();
 } catch( err ) {}
-</script><noscript><p><img src="http://beans.opensuse.org/piwik/piwik.php?idsite=22" style="border:0" alt="" /></p></noscript>
+</script>
 <!-- End Piwik Tracking Code -->
