- fixed html warning

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 ---
 navigation:
 - text: Home
-  urls: [ /., /index.html ]
+  urls: [ /, /index.html ]
 - text: Documentation
   urls: [ /documentation.html ]
 - text: Videos
