- include piwik code only on github

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,10 @@ navigation:
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+{% if site.safe %} {% comment %} GitHub sets site.safe {% endcomment %}
 {% if page.social %}{% include social.html %}{% endif %}
 {% if page.piwik %}{% include piwik.html %}{% endif %}
+{% endif %}
 
   </head>
   <body>
