- added content from opensuse.org wiki

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,14 @@
 navigation:
 - text: Home
   url: /index.html
+- text: Features
+  url: /features.html
 - text: Documentation
   url: /documentation.html
 - text: Videos
   url: /videos.html
+- text: Development
+  url: /development.html
 ---
 <!DOCTYPE html>
 <html lang="en">
