- renamed feature page to overview

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 ---
 navigation:
-- text: Home
+- text: Snapper
   url: /index.html
-- text: Features
-  url: /features.html
+- text: Overview
+  url: /overview.html
 - text: Documentation
   url: /documentation.html
 - text: Videos
