- added post about sync acl feature

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@ navigation:
   url: /index.html
 - text: Overview
   url: /overview.html
+- text: News
+  url: /news.html
 - text: Documentation
   url: /documentation.html
 - text: Videos
@@ -18,7 +20,7 @@ navigation:
     <title>Snapper, The ultimate Snapshot Tool for Linux</title>
 
     <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -59,7 +61,7 @@ navigation:
       <hr>
 
       <footer>
-	<p>&copy; 2013 <a href="http://www.suse.com/">SUSE</a></p>
+	<p>&copy; 2014 <a href="http://www.suse.com/">SUSE</a></p>
       </footer>
 
     </div>
