- added post about --no-dbus for all commands

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
         padding-bottom: 40px;
       }
     </style>
+    <link href="/css/pygments.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
