--- a/_includes/piwik.html
+++ b/_includes/piwik.html
@@ -1,4 +1,5 @@
 <!-- Start Piwik Tracking Code -->
+<!-- gives timeout, see https://github.com/openSUSE/snapper/issues/513
 <script type="text/javascript">
 var pkBaseURL = (("https:" == document.location.protocol) ? "https://beans.opensuse.org/piwik/" : "http://beans.opensuse.org/piwik/");
 document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
@@ -10,4 +11,5 @@ piwikTracker.trackPageView();
 piwikTracker.enableLinkTracking();
 } catch( err ) {}
 </script>
+-->
 <!-- End Piwik Tracking Code -->
