- disabled twitter code to avoid warning about trackers in Firefox

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,9 @@
 <!-- Twitter Tweet Button Code, https://dev.twitter.com/docs/tweet-button -->
+<!-- disabled to avoid warning about trackers in Firefox
 <script type="text/javascript">
   !function(d,s,id){ var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 </script>
+-->
 
 <!-- Google +1 Button Code, https://developers.google.com/+/web/+1button/ -->
 <!-- service was shut down
